# stark-translate

./: .env.church  .gitignore  .pre-commit-config.yaml  CLAUDE-macbook.md  CLAUDE-windows.md  CLAUDE.md  IMMEDIATE_TODO.md  README.md  ab_display.html  assess_quality.py  audience_display.html  benchmark_latency.py  build_glossary.py  church_display.html  codecov.yml  diarize.py  download_sermons.py  dry_run_ab.py  evaluate_translation.py  live_caption_monitor.py  mobile_display.html  obs_overlay.html  prepare_bible_corpus.py  preprocess_audio.py  previous_actions.md  pyproject.toml  requirements-mac.txt  requirements-nvidia.txt  requirements-windows.txt  run_church.sh  settings.py  setup_models.py  stt_benchmark.py  summarize_sermon.py  test_adaptive_model.py  todo.md  train_gemma.py  train_marian.py  train_whisper.py  transcribe_church.py  (+1 more)
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: commitlint.yml  label.yml  lint.yml  release.yml  security.yml  stale.yml  test.yml
bible_data/en/: web.jsonl
bible_data/glossary/: theological_glossary.json
displays/: ab_display.html  audience_display.html  church_display.html  mobile_display.html  obs_overlay.html
docs/: accent_tuning_plan.md  deploy.md  fast_stt_options.md  immediate_todo.md  implementation_plans.md  macos_libomp_fix.md  metrics.md  multi_lingual.md  multilingual_tuning_proposal.md  optimized.md  previous_actions.md  projection_integration.md  release_plan.md  roadmap.md  rtx2070_feasibility.md  seattle_training_run.md  todo.md  training_plan.md  training_time_estimates.md
engines/: __init__.py  active_learning.py  base.py  cuda_engine.py  factory.py  mlx_engine.py
features/: diarize.py  extract_verses.py  summarize_sermon.py
stark_data/: download_log.jsonl
stark_data/raw/: Gospel_Message_(12_14_25)_5D2rOMvkwrk.json  Gospel_Message_(12_21_25)_v-zEz5unrtc.json  Gospel_Message_(12_28_25)_GIwpDvJBAHs.json  Gospel_Message_(2_1_26)_Dt6ZKsavMRc.json  Gospel_Message_(2_8_26)_BpIELcuh8O0.json
tests/: conftest.py  test_active_learning.py  test_caption_monitor.py  test_caption_monitor_utils.py  test_diarize_utils.py  test_dry_run_diagnostics.py  test_dry_run_io.py  test_dry_run_utils.py  test_engine_base.py  test_engine_factory.py  test_engine_utilities.py  test_glossary.py  test_imports.py  test_kpi_report.py  test_pipeline_integration.py  test_prepare_finetune_data.py  test_settings.py  test_summarize_sermon.py  test_training_utils.py  test_translation_qe.py  test_tts_engine.py  test_validate_session.py  test_verse_extraction.py
tools/: benchmark_latency.py  convert_models_to_both.py  download_roundtrip_texts.py  kpi_report.py  live_caption_monitor.py  prepare_finetune_data.py  roundtrip_test.py  stt_benchmark.py  test_adaptive_model.py  translation_qe.py  validate_session.py
training/: assess_quality.py  evaluate_piper.py  evaluate_translation.py  export_piper_onnx.py  prepare_bible_corpus.py  prepare_piper_dataset.py  prepare_whisper_dataset.py  preprocess_audio.py  train_gemma.py  train_marian.py  train_piper.py  train_whisper.py  transcribe_church.py
